--- a/shortcuts.html
+++ b/shortcuts.html
@@ -167,7 +167,14 @@
                 <h5>Count Usage </h5>
                 </div>
                 <div class="col-12 usageCount">
-                  <input type="text" id="bssQuota" placeholder="Quota BSS"/>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                      ADSL
+                    </label>
+                    <input type="text" id="bssQuota" placeholder="Quota BSS"/>  
+                  </div>
+      
                   <input type="text" id="unusedBSS" placeholder="Remaining BSS"/>
                   <!-- <input type="text" id="remaining" class="countUsagBox" placeholder="Remaining Megabytes"/> -->
                   <p id="remaining" > </p>
